# bic

./: .bic_ignore  .gitignore  Cargo.toml  README.md
src/: commit.rs  log.rs  main.rs  reset.rs
src/util/: build_ignore_matcher.rs  commit_data.rs  mod.rs  read_head.rs
