[package]
name = "bic"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
ignore = "0.4.23"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
walkdir = "2.5.0"

[[bin]]
name = "bic"
path = "src/main.rs"